Remove overflow hidden to fix scroll down problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,6 @@
     background-attachment: fixed;
     background-position: center;
     height: 100%;
-    overflow: hidden;
   }
 
   .title {
